position logo on the main bg image

--- a/signUp.html
+++ b/signUp.html
@@ -14,7 +14,9 @@
 <body>
     <div class="body-container">
         <div class="leftSideImage">
-            <img src="logo.png" alt="Soft Solutions Logo" class="overlay-image">
+            <div class="logoBg">
+                <img src="logo.png" alt="Soft Solutions Logo" class="overlay-image">
+            </div>
             <p>Photo by <a href="https://unsplash.com/@tianhao_wang?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tianhao Wang</a> on <a href="https://unsplash.com/photos/a-man-sitting-on-top-of-a-hill-under-a-night-sky-filled-with-stars-T9rOibnaM48?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
             </p>
         </div>
